<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Strength History</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_ok">OK</string>
    <string name="name">Name</string>
    <string name="default_name">Name</string>
    <string name="exercises">Exercises</string>
    <string name="edit_exercise">Edit exercise</string>
    <string name="text_select_exercise_to_edit">Select exercise to edit.</string>
    <string name="empty_str"></string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="empty_listview_hint_create">Nothing here! Try to create something.</string>
    <string name="empty_listview">Nothing here!</string>
    <string name="create_exercise">Create exercise</string>
    <string name="delete_exercise">Delete exercise</string>
    <string name="add">Add</string>
    <string name="text_select_workout_to_edit">Select workout to edit.</string>
    <string name="edit_workout">Edit workout</string>
    <string name="create_workout">Create workout</string>
    <string name="delete_workout">Delete workout</string>
    <string name="workouts">Workouts</string>
    <string name="x">X</string>
    <string name="save_exercise">Save exercise</string>
    <string name="save_workout">Save workout</string>
    <string name="no_exercises_found">No exercises found.</string>
    <string name="select_exercise">Select exercise</string>
    <string name="start_workout">Start workout</string>
    <string name="self_weight_entry">Self weight entry</string>
    <string name="settings">Settings</string>
    <string name="exercises_preference_summary">Mange exercises</string>
    <string name="workouts_preference_summary">Mange workouts</string>
    <string name="repetitions">Repetitions</string>
    <string name="weight">Weight</string>
    <string name="results">Results</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="run_workout_error">Failed to open workout.</string>
    <string name="run_back_warning">Press again to cancel.</string>
    <string name="summary">Summary</string>
    <string name="delete_selected">Delete selected</string>
    <string name="edit_selected">Edit selected</string>
    <string name="add_set">Add set</string>
    <string name="finish">Finish</string>
    <string name="pref_unit_kg">kg</string>
    <string name="pref_unit_lbs">lbs</string>
    <string name="unit_preference_summary">Weights are displayed in %1$s</string>
    <string name="units">Units</string>
    <string name="history">History</string>
    <string name="event">Event</string>
    <string name="date">Date</string>
    <string name="charts">Charts</string>
    <string name="edit_data">Edit data</string>
    <string name="delete_data">Delete data</string>
    <string name="button_save">Save</string>
    <string name="dialog_event_delete_title">Delete event?</string>
    <string name="dialog_event_delete_message">%1$s %2$s will be lost.</string>
    <string name="dialog_exercise_delete_title">Delete exercise?</string>
    <string name="dialog_exercise_delete_message">History data associated with this exercise will be lost.</string>
    <string name="dialog_workout_delete_title">Delete workout?</string>
    <string name="dialog_workout_delete_message">History data associated with this workout will be lost.</string>
    <string name="error_exercise_data_not_found">Error: Exercise data not found.</string>
    <string name="error_workout_data_not_found">Error: Workout data not found.</string>
    <string name="select_exercisedata_to_edit">Select exercise data to edit</string>
    <string name="save_changes">Save changes</string>
    <string name="chart_label_x">Date</string>
    <string name="chart_label_y">Weight (%1$s)</string>
    <string name="select_chart">Select chart</string>
    <string name="generating_defaults">Generating defaults</string>
    <string name="latest_workoutdata_title">Latest %1$s</string>
    <string name="backup">Backup</string>
    <string name="importt">Import</string>
    <string name="backup_summary">Create a backup of the data</string>
    <string name="import_summary">Restore data from a backup</string>
    <string name="select_import_file">Select file to import</string>
    <string name="error_no_file_manager">Please install a file manager.</string>
    <string name="error_backup">Backup failed.</string>
    <string name="error_import">Import failed.</string>
    <string name="import_done">Data imported.</string>
    <string name="backup_save_via">Save via</string>
    <string name="backup_subject">%1$s backup</string>
    <string name="backup_text">Data backup from %1$s</string>
    <string name="email">Email</string>
    <string name="email_summary">This address will be used for backup and for authentication.</string>
    <string name="password">Password</string>
    <string name="password_summary">Password to your account.</string>
    <string name="standard_increase">Standard increase</string>
    <string name="pref_cat_user">User data</string>
    <string name="pref_cat_backup">Data backup</string>

</resources>
