<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <ListPreference
        android:defaultValue="@string/pref_unit_kg"
        android:entries="@array/pref_weight_units"
        android:entryValues="@array/pref_weight_units"
        android:key="pref_weight_units_key"
        android:summary="@string/unit_preference_summary"
        android:title="@string/units" />

    <Preference
        android:summary="@string/exercises_preference_summary"
        android:title="@string/exercises" >
        <intent
            android:targetClass="strength.history.ui.exercise.ExercisesActivity"
            android:targetPackage="strength.history" />
    </Preference>
    <Preference
        android:summary="@string/workouts_preference_summary"
        android:title="@string/workouts" >
        <intent
            android:targetClass="strength.history.ui.workout.WorkoutsActivity"
            android:targetPackage="strength.history" />
    </Preference>
    <Preference
        android:summary="@string/backup_summary"
        android:title="@string/backup" >
        <intent
            android:targetClass="strength.history.ui.BackupActivity"
            android:targetPackage="strength.history" />
    </Preference>
    <Preference
        android:summary="@string/import_summary"
        android:title="@string/importt" >
        <intent
            android:targetClass="strength.history.ui.ImportActivity"
            android:targetPackage="strength.history" />
    </Preference>

</PreferenceScreen>
