<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ui.history.HistoryActivity" >

    <LinearLayout
        android:id="@+id/linearLayoutHistoryTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/ui_half_space"
        android:layout_marginLeft="@dimen/ui_half_space" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/event"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/date"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </LinearLayout>

    <ListView
        android:id="@+id/listViewHistory"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/linearLayoutHistoryTop"
        tools:listitem="@layout/list_item_small_split_data" >
    </ListView>

    <TextView
        android:id="@+id/textViewEmptyList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/linearLayoutHistoryTop"
        android:gravity="center"
        android:text="@string/empty_listview_hint_create"
        android:textAppearance="?android:attr/textAppearanceSmall" />

</RelativeLayout>
