<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/linearLayoutBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" >

        <Button
            android:id="@+id/buttonSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/ui_half_space"
            android:layout_marginRight="@dimen/ui_half_space"
            android:text="@string/button_save" />

        <Button
            android:id="@+id/buttonCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/ui_half_space"
            android:layout_marginRight="@dimen/ui_half_space"
            android:text="@string/button_cancel" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/linearLayoutBottom"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="@dimen/ui_space"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/ui_half_space"
            android:layout_marginLeft="@dimen/ui_half_space"
            android:text="@string/name"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <EditText
            android:id="@+id/editTextName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:inputType="textCapSentences" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/ui_half_space"
            android:layout_marginLeft="@dimen/ui_half_space"
            android:layout_marginTop="@dimen/ui_space"
            android:text="@string/muscle_group"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <Spinner
            android:id="@+id/spinnerMuscleGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/muscle_groups"
            android:prompt="@string/muscle_group"
            tools:listitem="@android:layout/simple_spinner_item" />
    </LinearLayout>

</RelativeLayout>
